# CN-Stats-Data

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/cn_stats_data/: __init__.py  log.py  log.yml
src/cn_stats_data/api/: __init__.py  cn_stats_api.py  models.py
src/cn_stats_data/data/: __init__.py  abstract.py  dao.py  db_code.py  metric_code.py  metric_data.py  models.py  region_code.py
src/cn_stats_data/db/: __init__.py  config.toml  db_config.py  metric_code_dao.py  metric_data_dao.py  models.py  process_data_dao.py  region_code_dao.py
src/cn_stats_data/downloader/: __init__.py  app.py  metric_code_download.py  metric_data_download.py  region_code_download.py
tests/: simple_test.py
tests/api/: api_tests.py  cn_stats_api_tests.py
tests/data/: db_code_tests.py  metric_code_tests.py
tests/db/: metric_code_dao_test.py  metric_code_dao_tests.py  metric_data_dao_test.py  metric_data_dao_tests.py  models_test.py  region_code_dao_test.py  region_code_dao_tests.py
tests/downloader/: app_test.py  app_tests.py  metric_code_download_test.py  region_code_download_tests.py
